--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -34,6 +34,7 @@
     "@monaco-editor/react": "^4.4.6",
     "@netlify/plugin-nextjs": "^4.36.1",
     "@tippyjs/react": "^4.2.6",
+    "canvas": "^2.11.2",
     "css-loader": "^6.8.1",
     "js-base64": "^3.7.3",
     "js-file-download": "^0.4.12",
@@ -117,6 +118,7 @@
     "eslint-webpack-plugin": "^4.0.1",
     "https-browserify": "^1.0.0",
     "markdown-toc": "^1.2.0",
+    "node-loader": "^2.0.0",
     "path-browserify": "^1.0.1",
     "postcss": "^8.4.19",
     "process": "^0.11.10",
@@ -129,7 +131,8 @@
     "url": "^0.11.0",
     "util": "^0.12.5",
     "web-vitals": "^3.1.0",
-    "webpack": "^5.75.0"
+    "webpack": "^5.75.0",
+    "webpack-node-externals": "^3.0.0"
   },
   "jest": {
     "transformIgnorePatterns": [
