--- a/.github/workflows/lint-pr-adr.yml
+++ b/.github/workflows/lint-pr-adr.yml
@@ -1,13 +1,15 @@
 name: PR ADR Validation Workflow
 
 on:
-  pull_request:
+  pull_request_target:
     types:
       - opened
+      - reopened
       - edited
       - synchronize
       - labeled
       - unlabeled
+      - ready_for_review
 
 jobs:
   validate_adr_pr:
@@ -18,7 +20,7 @@ jobs:
         id: lint_title_adr
         with:
           result-encoding: json
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.GH_TOKEN }}
           script: |
             const title = context.payload.pull_request.title;
             const labels = context.payload.pull_request.labels;
@@ -59,7 +61,7 @@ jobs:
         # condition you can continue the execution with the populated error message.
         with:
           header: pr-title-lint-adr-error
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN}}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           message: |
             Hey there and thank you for opening this ADR pull request! 👋🏼
             The ADR Pull request must follow this PR naming convention: 
@@ -70,7 +72,7 @@ jobs:
       - if: (fromJSON(steps.lint_title_adr.outputs.result).status == 'ok')
         uses: marocchino/sticky-pull-request-comment@v2
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN}}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           header: pr-title-lint-adr-error
           delete: true
       - if: (fromJSON(steps.lint_title_adr.outputs.result).status == 'ok')
@@ -102,7 +104,7 @@ jobs:
         # condition you can continue the execution with the populated error message.
         with:
           header: pr-files-changed-adr-error
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN}}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           message: |
             Hey there and thank you for opening this ADR pull request! 👋🏼
             The ADR Pull request must change only the ADR file that match ${{ fromJSON(steps.lint_title_adr.outputs.result).expectedFileMatch }}
@@ -115,6 +117,6 @@ jobs:
         name: Delete comment fail changed
         uses: marocchino/sticky-pull-request-comment@v2
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN}}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           header: pr-files-changed-adr-error
           delete: true
