--- a/apps/design-system/package.json
+++ b/apps/design-system/package.json
@@ -21,6 +21,7 @@
     "test": "echo \"No tests\"",
     "eject": "react-scripts eject",
     "dev": "storybook dev -p 6006 --no-open",
+    "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
     "build": "storybook build"
   },
   "eslintConfig": {
