--- a/apps/design-system/package.json
+++ b/apps/design-system/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "@tippyjs/react": "^4.2.6",
+    "concurrently": "^8.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
@@ -20,7 +21,9 @@
     "generate:assets": "echo \"No assets to configure\"",
     "test": "echo \"No tests\"",
     "eject": "react-scripts eject",
-    "dev": "storybook dev -p 6006 --no-open",
+    "dev": "concurrently 'npm run watch:*'",
+    "watch:storybook": "storybook dev -p 6006 --no-open",
+    "watch:tailwind": "npx tailwindcss -i ./src/styles/tailwind.css -o ./src/styles/tailwind.output.css --watch",
     "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
     "build": "storybook build"
   },
@@ -52,7 +55,7 @@
     "@storybook/addon-links": "^7.0.20",
     "@storybook/addon-mdx-gfm": "^7.0.20",
     "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/addon-styling": "^1.1.0",
+    "@storybook/addon-styling": "^1.3.6",
     "@storybook/addons": "^7.0.20",
     "@storybook/blocks": "^7.0.22",
     "@storybook/preset-create-react-app": "^7.0.20",
@@ -61,12 +64,13 @@
     "@storybook/react-webpack5": "^7.0.20",
     "@storybook/testing-library": "^0.1.0",
     "@storybook/theming": "^7.0.22",
-    "autoprefixer": "^10.4.14",
+    "autoprefixer": "^10.4.15",
     "babel-loader": "^8.2.3",
     "fork-ts-checker-webpack-plugin": "^8.0.0",
     "react-docgen-typescript-plugin": "^1.0.5",
     "remark-gfm": "^3.0.1",
     "storybook": "^7.0.20",
+    "tailwindcss": "^3.3.3",
     "ts-loader": "^9.4.3",
     "typescript": "^5.0.2",
     "webpack": "^5.69.0"
