--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -26,8 +26,8 @@
     "@asyncapi/avro-schema-parser": "^3.0.2",
     "@asyncapi/converter": "^1.3.1",
     "@asyncapi/openapi-schema-parser": "^3.0.4",
-    "@asyncapi/parser": "^3.0.0-next-major-spec.2",
-    "@asyncapi/react-component": "^1.0.0-next.54",
+    "@asyncapi/parser": "^3.0.0-next-major-spec.3",
+    "@asyncapi/react-component": "^1.0.2",
     "@asyncapi/specs": "^6.0.0-next-major-spec.6",
     "@ebay/nice-modal-react": "^1.2.10",
     "@headlessui/react": "^1.7.4",
