--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
   ],
   "packageManager": "npm@8.19.3",
   "dependencies": {
-    "@changesets/cli": "^2.26.2",
-    "ajv": "^8.12.0"
+    "@changesets/cli": "^2.26.2"
   }
 }
