--- a/.github/workflows/issues-metrics.yml
+++ b/.github/workflows/issues-metrics.yml
@@ -32,7 +32,7 @@ jobs:
       uses: github/issue-metrics@v2
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SEARCH_QUERY: 'repo:shapeitapp/shapeitapp created:${{ env.last_month }}'
+        SEARCH_QUERY: 'repo:asyncapi/studio created:${{ env.last_month }}'
 
     - name: Create issue
       uses: peter-evans/create-issue-from-file@v4
