feat: Add v3 examples

--- a/apps/studio/src/examples/ibmmq.yml
+++ b/apps/studio/src/examples/ibmmq.yml
@@ -1,32 +1,42 @@
-asyncapi: 2.6.0
+asyncapi: 3.0.0
 info:
   title: Record Label Service
   version: 1.1.0
   description: This service is in charge of processing music
   license:
     name: Apache License 2.0
-    url: https://www.apache.org/licenses/LICENSE-2.0
+    url: 'https://www.apache.org/licenses/LICENSE-2.0'
 servers:
   production:
-    url: 'ibmmq://localhost:1414/QM1/DEV.APP.SVRCONN'
+    host: 'localhost:1414'
+    pathname: /QM1/DEV.APP.SVRCONN
     protocol: ibmmq-secure
     description: Production Instance 1
     bindings:
       ibmmq:
         cipherSpec: ANY_TLS12
 channels:
-  song/released:
-    publish:
-      operationId: publish
-      message:
-        $ref: '#/components/messages/song'
-    subscribe:
-      operationId: subscribe
-      message:
-        $ref: '#/components/messages/song'
+  songReleased:
+    address: song/released
+    messages:
+      Song:
+        $ref: '#/components/messages/Song'
+operations:
+  receiveSong:
+    action: receive
+    channel:
+      $ref: '#/channels/songReleased'
+    messages:
+      - $ref: '#/components/messages/Song'
+  sendSong:
+    action: send
+    channel:
+      $ref: '#/channels/songReleased'
+    messages:
+      - $ref: '#/components/messages/Song'
 components:
   messages:
-    song:
+    Song:
       payload:
         type: object
         properties:
