--- a/apps/studio/src/examples/streetlights-kafka.yml
+++ b/apps/studio/src/examples/streetlights-kafka.yml
@@ -1,87 +1,124 @@
-asyncapi: '2.6.0'
+asyncapi: 3.0.0
 info:
   title: Streetlights Kafka API
-  version: '1.0.0'
-  description: |
-    The Smartylighting Streetlights API allows you to remotely manage the city lights.
-
-    ### Check out its awesome features:
-
-    * Turn a specific streetlight on/off 🌃
-    * Dim a specific streetlight 😎
-    * Receive real-time information about environmental lighting conditions 📈
+  version: 1.0.0
+  description: "The Smartylighting Streetlights API allows you to remotely manage the city lights.\n\n### Check out its awesome features:\n\n* Turn a specific streetlight on/off \U0001F303\n* Dim a specific streetlight \U0001F60E\n* Receive real-time information about environmental lighting conditions \U0001F4C8\n"
   license:
     name: Apache 2.0
-    url: https://www.apache.org/licenses/LICENSE-2.0
-
-servers:
-  test:
-    url: test.mykafkacluster.org:8092
-    protocol: kafka-secure
-    description: Test broker
-    security:
-      - saslScram: []
-
+    url: 'https://www.apache.org/licenses/LICENSE-2.0'
 defaultContentType: application/json
-
+servers:
+  scram-connections:
+    host: 'test.mykafkacluster.org:18092'
+    protocol: kafka-secure
+    description: Test broker secured with scramSha256
+    security:
+      - $ref: '#/components/securitySchemes/saslScram'
+    tags:
+      - name: 'env:test-scram'
+        description: >-
+          This environment is meant for running internal tests through
+          scramSha256
+      - name: 'kind:remote'
+        description: This server is a remote server. Not exposed by the application
+      - name: 'visibility:private'
+        description: This resource is private and only available to certain users
+  mtls-connections:
+    host: 'test.mykafkacluster.org:28092'
+    protocol: kafka-secure
+    description: Test broker secured with X509
+    security:
+      - $ref: '#/components/securitySchemes/certs'
+    tags:
+      - name: 'env:test-mtls'
+        description: This environment is meant for running internal tests through mtls
+      - name: 'kind:remote'
+        description: This server is a remote server. Not exposed by the application
+      - name: 'visibility:private'
+        description: This resource is private and only available to certain users
 channels:
-  smartylighting.streetlights.1.0.event.{streetlightId}.lighting.measured:
+  lightingMeasured:
+    address: 'smartylighting.streetlights.1.0.event.{streetlightId}.lighting.measured'
+    messages:
+      lightMeasured:
+        $ref: '#/components/messages/lightMeasured'
     description: The topic on which measured values may be produced and consumed.
     parameters:
       streetlightId:
         $ref: '#/components/parameters/streetlightId'
-    publish:
-      summary: Inform about environmental lighting conditions of a particular streetlight.
-      operationId: receiveLightMeasurement
-      traits:
-        - $ref: '#/components/operationTraits/kafka'
-      message:
-        $ref: '#/components/messages/lightMeasured'
-
-  smartylighting.streetlights.1.0.action.{streetlightId}.turn.on:
-    parameters:
-      streetlightId:
-        $ref: '#/components/parameters/streetlightId'
-    subscribe:
-      operationId: turnOn
-      traits:
-        - $ref: '#/components/operationTraits/kafka'
-      message:
+  lightTurnOn:
+    address: 'smartylighting.streetlights.1.0.action.{streetlightId}.turn.on'
+    messages:
+      turnOn:
         $ref: '#/components/messages/turnOnOff'
-
-  smartylighting.streetlights.1.0.action.{streetlightId}.turn.off:
     parameters:
       streetlightId:
         $ref: '#/components/parameters/streetlightId'
-    subscribe:
-      operationId: turnOff
-      traits:
-        - $ref: '#/components/operationTraits/kafka'
-      message:
+  lightTurnOff:
+    address: 'smartylighting.streetlights.1.0.action.{streetlightId}.turn.off'
+    messages:
+      turnOff:
         $ref: '#/components/messages/turnOnOff'
-
-  smartylighting.streetlights.1.0.action.{streetlightId}.dim:
     parameters:
       streetlightId:
         $ref: '#/components/parameters/streetlightId'
-    subscribe:
-      operationId: dimLight
-      traits:
-        - $ref: '#/components/operationTraits/kafka'
-      message:
+  lightsDim:
+    address: 'smartylighting.streetlights.1.0.action.{streetlightId}.dim'
+    messages:
+      dimLight:
         $ref: '#/components/messages/dimLight'
-
+    parameters:
+      streetlightId:
+        $ref: '#/components/parameters/streetlightId'
+operations:
+  receiveLightMeasurement:
+    action: receive
+    channel:
+      $ref: '#/channels/lightingMeasured'
+    summary: >-
+      Inform about environmental lighting conditions of a particular
+      streetlight.
+    traits:
+      - $ref: '#/components/operationTraits/kafka'
+    messages:
+      - $ref: '#/components/messages/lightMeasured'
+  turnOn:
+    action: send
+    channel:
+      $ref: '#/channels/lightTurnOn'
+    traits:
+      - $ref: '#/components/operationTraits/kafka'
+    messages:
+      - $ref: '#/components/messages/turnOnOff'
+  turnOff:
+    action: send
+    channel:
+      $ref: '#/channels/lightTurnOff'
+    traits:
+      - $ref: '#/components/operationTraits/kafka'
+    messages:
+      - $ref: '#/components/messages/turnOnOff'
+  dimLight:
+    action: send
+    channel:
+      $ref: '#/channels/lightsDim'
+    traits:
+      - $ref: '#/components/operationTraits/kafka'
+    messages:
+      - $ref: '#/components/messages/dimLight'
 components:
   messages:
     lightMeasured:
       name: lightMeasured
       title: Light measured
-      summary: Inform about environmental lighting conditions of a particular streetlight.
+      summary: >-
+        Inform about environmental lighting conditions of a particular
+        streetlight.
       contentType: application/json
       traits:
         - $ref: '#/components/messageTraits/commonHeaders'
       payload:
-        $ref: "#/components/schemas/lightMeasuredPayload"
+        $ref: '#/components/schemas/lightMeasuredPayload'
     turnOnOff:
       name: turnOnOff
       title: Turn on/off
@@ -89,7 +126,7 @@ components:
       traits:
         - $ref: '#/components/messageTraits/commonHeaders'
       payload:
-        $ref: "#/components/schemas/turnOnOffPayload"
+        $ref: '#/components/schemas/turnOnOffPayload'
     dimLight:
       name: dimLight
       title: Dim light
@@ -97,8 +134,7 @@ components:
       traits:
         - $ref: '#/components/messageTraits/commonHeaders'
       payload:
-        $ref: "#/components/schemas/dimLightPayload"
-
+        $ref: '#/components/schemas/dimLightPayload'
   schemas:
     lightMeasuredPayload:
       type: object
@@ -108,18 +144,18 @@ components:
           minimum: 0
           description: Light intensity measured in lumens.
         sentAt:
-          $ref: "#/components/schemas/sentAt"
+          $ref: '#/components/schemas/sentAt'
     turnOnOffPayload:
       type: object
       properties:
         command:
           type: string
           enum:
-            - on
-            - off
+            - 'on'
+            - 'off'
           description: Whether to turn on or off the light.
         sentAt:
-          $ref: "#/components/schemas/sentAt"
+          $ref: '#/components/schemas/sentAt'
     dimLightPayload:
       type: object
       properties:
@@ -129,23 +165,21 @@ components:
           minimum: 0
           maximum: 100
         sentAt:
-          $ref: "#/components/schemas/sentAt"
+          $ref: '#/components/schemas/sentAt'
     sentAt:
       type: string
       format: date-time
       description: Date and time when the message was sent.
-
   securitySchemes:
     saslScram:
       type: scramSha256
       description: Provide your username and password for SASL/SCRAM authentication
-
+    certs:
+      type: X509
+      description: Download the certificate files from service provider
   parameters:
     streetlightId:
       description: The ID of the streetlight.
-      schema:
-        type: string
-
   messageTraits:
     commonHeaders:
       headers:
@@ -155,9 +189,11 @@ components:
             type: integer
             minimum: 0
             maximum: 100
-
   operationTraits:
     kafka:
       bindings:
         kafka:
-          clientId: my-app-id
+          clientId:
+            type: string
+            enum:
+              - my-app-id
