ci: update Dockerfile path

--- a/.github/workflows/publish-docker-image.yml
+++ b/.github/workflows/publish-docker-image.yml
@@ -21,6 +21,6 @@ jobs:
         uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
         with:
           context: .
-          file: ./apps/studio/Dockerfile
+          file: ./Dockerfile
           push: true
           tags: asyncapi/studio:latest
