--- a/apps/design-system/package.json
+++ b/apps/design-system/package.json
@@ -45,10 +45,10 @@
     ]
   },
   "devDependencies": {
-    "concurrently": "^8.2.1",
     "@babel/core": "^7.17.4",
     "@babel/preset-env": "^7.22.4",
     "@babel/preset-react": "^7.22.3",
+    "@storybook/addon-a11y": "^7.5.3",
     "@storybook/addon-actions": "^7.0.20",
     "@storybook/addon-essentials": "^7.0.20",
     "@storybook/addon-interactions": "^7.0.20",
@@ -66,6 +66,7 @@
     "@storybook/theming": "^7.0.22",
     "autoprefixer": "^10.4.15",
     "babel-loader": "^8.2.3",
+    "concurrently": "^8.2.1",
     "fork-ts-checker-webpack-plugin": "^8.0.0",
     "react-docgen-typescript-plugin": "^1.0.5",
     "remark-gfm": "^3.0.1",
