--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -27,6 +27,7 @@
     "@asyncapi/converter": "^1.4.5",
     "@asyncapi/openapi-schema-parser": "^3.0.4",
     "@asyncapi/parser": "^3.0.1",
+    "@asyncapi/protobuf-schema-parser": "^3.0.4",
     "@asyncapi/react-component": "^1.2.2",
     "@asyncapi/specs": "^6.1.0",
     "@ebay/nice-modal-react": "^1.2.10",
