--- a/apps/studio/src/examples/streetlights-kafka.yml
+++ b/apps/studio/src/examples/streetlights-kafka.yml
@@ -2,7 +2,14 @@ asyncapi: 3.0.0
 info:
   title: Streetlights Kafka API
   version: 1.0.0
-  description: "The Smartylighting Streetlights API allows you to remotely manage the city lights.\n\n### Check out its awesome features:\n\n* Turn a specific streetlight on/off \U0001F303\n* Dim a specific streetlight \U0001F60E\n* Receive real-time information about environmental lighting conditions \U0001F4C8\n"
+  description: |-
+    The Smartylighting Streetlights API allows you to remotely manage the city
+    lights.
+    ### Check out its awesome features:
+  
+    * Turn a specific streetlight on/off 🌃  
+    * Dim a specific streetlight 😎
+    * Receive real-time information about environmental lighting conditions 📈
   license:
     name: Apache 2.0
     url: 'https://www.apache.org/licenses/LICENSE-2.0'
