--- a/apps/studio-next/package.json
+++ b/apps/studio-next/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@codemirror/state": "^6.4.1",
     "@types/node": "20.4.6",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
+    "codemirror": "^6.0.1",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "next": "13.5.1",
@@ -20,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "zustand": "^4.5.2"
   }
 }
