--- a/apps/studio-next/package.json
+++ b/apps/studio-next/package.json
@@ -10,6 +10,11 @@
   },
   "dependencies": {
     "@codemirror/state": "^6.4.1",
+    "@codemirror/commands": "^6.3.3",
+    "@codemirror/lang-json": "^6.0.1",
+    "@codemirror/lang-yaml": "^6.0.0",
+    "@codemirror/language": "^6.10.1",
+    "@codemirror/theme-one-dark": "^6.1.2",
     "@types/node": "20.4.6",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
