--- a/apps/studio-next/package.json
+++ b/apps/studio-next/package.json
@@ -9,20 +9,43 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@asyncapi/avro-schema-parser": "^3.0.18",
+    "@asyncapi/openapi-schema-parser": "^3.0.18",
+    "@asyncapi/parser": "^3.0.10",
+    "@asyncapi/protobuf-schema-parser": "^3.2.8",
+    "@asyncapi/react-component": "^1.0.0-next.54",
+    "@codemirror/commands": "^6.3.3",
+    "@codemirror/lang-json": "^6.0.1",
+    "@codemirror/lang-yaml": "^6.0.0",
+    "@codemirror/language": "^6.10.1",
     "@codemirror/state": "^6.4.1",
+    "@codemirror/theme-one-dark": "^6.1.2",
     "@types/node": "20.4.6",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
+    "ajv": "^8.0.1",
+    "assert": "^2.1.0",
     "autoprefixer": "10.4.14",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
+    "canvas": "^2.11.2",
     "codemirror": "^6.0.1",
+    "encoding": "^0.1.13",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "https-browserify": "^1.0.0",
     "next": "13.5.1",
+    "path-browserify": "^1.0.1",
     "postcss": "8.4.31",
+    "raw-loader": "^4.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
+    "url": "^0.11.3",
+    "util": "^0.12.5",
     "zustand": "^4.5.2"
   }
 }
