--- a/apps/studio-next/package.json
+++ b/apps/studio-next/package.json
@@ -26,6 +26,7 @@
     "@headlessui/react": "^1.7.4",
     "@hookstate/core": "^4.0.0-rc21",
     "@monaco-editor/react": "^4.4.6",
+    "@stoplight/yaml": "^4.3.0",
     "@tippyjs/react": "^4.2.6",
     "codemirror": "^6.0.1",
     "js-base64": "^3.7.3",
@@ -67,6 +68,7 @@
     "autoprefixer": "^10.4.13",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
+    "eslint-config-next": "14.1.4",
     "eslint-plugin-security": "^1.5.0",
     "eslint-plugin-sonarjs": "^0.16.0",
     "https-browserify": "^1.0.0",
