--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "build:studio-next": "turbo run build --no-cache --filter=studio-next..."
   },
   "devDependencies": {
-    "esbuild": "^0.19.0",
     "turbo": "^1.10.12"
   },
   "workspaces": [
@@ -30,7 +29,6 @@
   ],
   "packageManager": "npm@8.19.3",
   "dependencies": {
-    "@changesets/cli": "^2.26.2",
-    "lodash": "^4.17.21"
+    "@changesets/cli": "^2.26.2"
   }
 }
