--- a/apps/design-system/package.json
+++ b/apps/design-system/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@asyncapi/studio-ui": "workspace:*",
     "@headlessui/react": "^1.7.13",
     "@mdx-js/react": "^1.6.22",
     "@testing-library/jest-dom": "^5.16.2",
@@ -12,7 +13,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
-    "@asyncapi/studio-ui": "*",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -46,30 +46,30 @@
     "@babel/core": "^7.17.4",
     "@babel/preset-env": "^7.22.4",
     "@babel/preset-react": "^7.22.3",
-    "@storybook/addon-actions": "^7.0.20",
-    "@storybook/addon-essentials": "^7.0.20",
-    "@storybook/addon-interactions": "^7.0.20",
-    "@storybook/addon-links": "^7.0.20",
-    "@storybook/addon-mdx-gfm": "^7.0.20",
-    "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/addon-styling": "^1.1.0",
-    "@storybook/addons": "^7.0.20",
-    "@storybook/blocks": "^7.0.22",
-    "@storybook/preset-create-react-app": "^7.0.20",
-    "@storybook/preset-typescript": "^3.0.0",
-    "@storybook/react": "^7.0.20",
-    "@storybook/react-webpack5": "^7.0.20",
-    "@storybook/testing-library": "^0.1.0",
-    "@storybook/theming": "^7.0.22",
+    "@storybook/addon-actions": "^7.6.18",
+    "@storybook/addon-essentials": "^7.6.18",
+    "@storybook/addon-interactions": "^7.6.18",
+    "@storybook/addon-docs": "^7.6.18",
+    "@storybook/addon-links": "^7.6.18",
+    "@storybook/addons": "^7.6.18",
+    "@storybook/blocks": "^7.6.18",
+    "@storybook/preset-create-react-app": "^7.6.18",
+    "@babel/preset-typescript": "^7.24.1",
+    "@storybook/react": "^7.6.18",
+    "@storybook/react-webpack5": "^7.6.18",
+    "@storybook/test": "^7.6.18",
+    "@storybook/theming": "^7.6.18",
     "autoprefixer": "^10.4.14",
     "babel-loader": "^8.2.3",
     "fork-ts-checker-webpack-plugin": "^8.0.0",
+    "react-docgen-typescript": "^2.2.2",
     "react-docgen-typescript-plugin": "^1.0.5",
     "remark-gfm": "^3.0.1",
     "storybook": "^7.0.20",
     "ts-loader": "^9.4.3",
     "typescript": "^5.0.2",
-    "webpack": "^5.69.0"
+    "webpack": "^5.69.0",
+    "tailwind-config": "workspace:*"
   },
   "publishConfig": {
     "access": "public"
