--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "apps/*",
     "packages/*"
   ],
-  "packageManager": "npm@8.19.3",
+  "packageManager": "pnpm@9.0.6",
   "dependencies": {
     "@changesets/cli": "^2.26.2"
   }
