--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "url": "git://github.com/asyncapi/studio.git"
   },
   "scripts": {
-    "lint": "eslint --ext .tsx,.ts .",
+    "lint": "turbo run lint",
     "dev": "turbo run dev",
     "ds": "turbo run dev --no-cache --continue --filter=design-system...",
     "studio": "turbo run dev --filter=studio...",
@@ -21,6 +21,11 @@
     "build:studio-next": "turbo run build --no-cache --filter=studio-next..."
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^7.7.1",
+    "eslint": "^9.1.1",
+    "eslint-plugin-react": "7.28.0",
+    "eslint-plugin-security": "^3.0.0",
+    "eslint-plugin-sonarjs": "^0.25.1",
     "turbo": "^1.10.12"
   },
   "workspaces": [
