--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "publish-packages": "turbo run build && changeset publish",
     "build:studio": "turbo run build --no-cache --filter=studio...",
     "build:ds": "turbo run build --filter=design-system...",
-    "build:studio-next": "turbo run build --no-cache --filter=studio-next..."
+    "build:studio-next": "turbo run build --no-cache --filter=studio-next...",
+    "generate:assets": "turbo run generate:assets"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^7.7.1",
