--- a/apps/studio-next/package.json
+++ b/apps/studio-next/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "echo 'No linting configured'"
   },
   "dependencies": {
     "@codemirror/state": "^6.4.1",
@@ -15,18 +15,20 @@
     "@codemirror/lang-yaml": "^6.0.0",
     "@codemirror/language": "^6.10.1",
     "@codemirror/theme-one-dark": "^6.1.2",
+    "@stoplight/yaml": "^4.3.0",
+    "@codemirror/view": "^6.26.3",
     "@types/node": "20.4.6",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "codemirror": "^6.0.1",
-    "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
-    "next": "13.5.1",
+    "next": "14.2.3",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
+    "tippy.js": "^6.3.7",
     "typescript": "5.1.6",
     "zustand": "^4.5.2"
   }
