--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -28,7 +28,8 @@
     "@radix-ui/react-tooltip": "^1.0.6",
     "@radix-ui/react-switch": "^1.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@asyncapi/studio-utils": "*"
   },
   "devDependencies": {
     "@types/react": "^18.2.5",
